Fixed filename not showing in thunar

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -2,7 +2,15 @@
  * Nautilus *
  ************/
 .nautilus-window {
-
+  .frame{
+    *:selected, *:selected:backdrop{
+      background: transparent;
+      color: $selected_bg_color;
+      label {
+        color: $selected_bg_color;
+      }
+    } 
+  }
   paned {
     > separator { background-image: none; }
   }
