--- a/gtk-3.0/widgets/_notebooks.scss
+++ b/gtk-3.0/widgets/_notebooks.scss
@@ -2,12 +2,6 @@
  * Notebooks *
  *************/
 notebook {
-  .frame{
-    *:selected, *:selected:backdrop{
-      background: transparent;
-      color: $selected_bg_color;
-    } 
-  }
   > header {
     padding: 1px;
     border-color: $borders_color;
